--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
             <button onclick="appendNumber(2)">2</button>
             <button onclick="appendNumber(3)">3</button>
             <button onclick="calculate()">=</button>
-            <button onclick="appendNumber(0)" class="zero">0</button>
+            <button class="zero" onclick="appendNumber(0)">0</button>
             <button onclick="appendNumber('.')">.</button>
         </div>
     </div>
