--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora Simples</title>
+    <title>Simple Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="calculator">
         <div class="display" id="display">0</div>
         <div class="buttons">
-            <button onclick="clearAll()">AC</button>
+            <button class="orange" onclick="clearAll()">AC</button>
             <button onclick="clearEntry()">C</button>
             <button onclick="appendOperator('/')">/</button>
             <button onclick="appendOperator('*')">*</button>
@@ -25,7 +25,7 @@
             <button onclick="appendNumber(1)">1</button>
             <button onclick="appendNumber(2)">2</button>
             <button onclick="appendNumber(3)">3</button>
-            <button onclick="calculate()">=</button>
+            <button class="orange" onclick="calculate()">=</button>
             <button class="zero" onclick="appendNumber(0)">0</button>
             <button onclick="appendNumber('.')">.</button>
         </div>
